# limesdr

./: .#configure.ac  .dir-locals.el  .gitignore  README.md  configure.ac
docs/: Doxyfile.in  Makefile.am  overview.dox
examples/: .#IrisFullDuplex.cpp
include/: analyser.h  analysis.h  beacon.h  beacon_main.h  beacon_test.h  detector.h  measure_delay.h  modulation.h  modulator.h  rx_tx.h  sdr.h  sdr_config.h  tag_main.h  tag_test.h  tx_test.h
scripts/: MeasureDelay.py
src/: Makefile.am  analyser.cpp  analysis.cpp  beacon.cpp  beacon_main.cpp  beacon_test.cpp  detector.cpp  measure_delay  measure_delay.cpp  modulation.cpp  modulator.cpp  rx_tx.cpp  sdr.cpp  tag_main.cpp  tag_test.cpp  tx_test  tx_test.cpp
