AM_CPPFLAGS = -I$(top_srcdir)/include
bin_PROGRAMS = beacon_main tag_main beacon_test tag_test tx_test
beacon_main_SOURCES = beacon_main.cpp sdr.cpp modulation.cpp
tag_main_SOURCES = tag_main.cpp modulation.cpp
beacon_test_SOURCES = beacon_test.cpp
tag_test_SOURCES = tag_test.cpp
tx_test_SOURCES = tx_test.cpp
